<resources>
    <string name="app_name">Football Betting Tips 365</string>

    <string name="description1">is the main protagonist of Demon Slayer: Kimetsu no Yaiba. He is a Demon Slayer in the Demon Slayer Corps, who joined to find a remedy to turn his sister, Nezuko Kamado, back into a human and to hunt down and kill demons,</string>
    <string name="description2"> is the deuteragonist of Demon Slayer: Kimetsu no Yaiba. She is a demon and the younger sister of Tanjiro Kamado and one of the two remaining members of the Kamado family. Formerly a human, she was attacked and transformed into a demon by Muzan Kibutsuji.</string>
    <string name="description3">is one of the main protagonists of Demon Slayer: Kimetsu no Yaiba and along with Zenitsu Agatsuma, a traveling companion of Tanjiro Kamado and Nezuko Kamado. He is also a Demon Slayer in the Demon Slayer Corps.</string>
    <string name="description4">is one of the main protagonists of Demon Slayer: Kimetsu no Yaiba and along with Inosuke Hashibira, a travelling companion of Tanjiro Kamado and Nezuko Kamado. He is also a Demon Slayer in the Demon Slayer Corps.</string>

    <string name="desc1">There are various betting possibilities in a match, ranging from the ultimate score to the amount of cards used. In truth, the bookmakers we have chosen feature a wide range of options for today games. So, what are the greatest bets for today game forecasts? At Football Prediction 365, we provide daily predictions for all of today fixtures. We have also taken the time to publish match predictions for today and every day. We are not only specialists in this field, but also fans of the game, and our enthusiasm leads us to be available at all times to provide accurate information for each game that will be played today. As a result, you can be confident that if you visit our website today, we will have today match forecast available for you.</string>
    <string name="desc2">A panel of professionals uses all available information to compile a football preview, including statistical data and information about the teams that will compete. Within the study, we can see the teams most recent form, as well as their most recent direct confrontation, attacking and defending capacity. Then we look at the less obvious tendencies. Before making a forecast, we consider not only the stats of the two clubs involved, but also news from the world of football in general.</string>
    <string name="desc3">The greatest approach to make money from football betting is to keep up with daily football forecasts, as well as team information, trends, and news. That is why we developed Footpredictions.com to provide the greatest free football tips, so be sure to check back every day for updated information.</string>
    <string name="desc4">Tips bet provides the greatest and most comprehensive reviews of the best bookmakers on the market, generated both by consumers and by our online betting experts. We also offer a variety of sports betting techniques and vital online betting tips in order to maximize returns on your internet betting tips.</string>
    <string name="desc5">To begin betting online, it is best to first select a good bookmaker that best meets our needs, based on bonuses, diversity, or sorts of bets. As a result, specializing in a sport and implementing a bankroll management approach is advantageous.</string>
    <string name="desc6">On the other hand, in order to assist you in becoming a true betting expert, we provide you with the greatest sports predictions updated daily by our specialists. And, if you want to stay informed, you may visit our sports betting predictions department, where you will get the most up-to-date and comprehensive specialized information on the games that interest you, particularly football betting.</string>
    <string name="desc7">This wager entails betting on the total number of balls in the nets, regardless of whether team scores. Generally, a value greater than or less than 2.5 objectives is used. However, this can vary based on the teams circumstances.</string>

    <string name="about">Football predictions, betting recommendations, free previews, football statistics, and betting trends are all available. All of information is available at Football Prediction 365. For years, our knowledgeable sources have found value in betting. We can assist you whether you are an experienced sports fan who enjoys statistics and is devoted to analysis or a passionate gambler hunting for the perfect accumulator.</string>
<string name="about2">Football Betting Prediction Today football predictions include 12 betting recommendations, BTTS predictions, over/under 2.5 goals predictions, and correct score predictions for today fixtures. Every day, our dedicated and experienced football experts provide you with free football predictions and trustworthy football recommendations. Who wants to try their hand at more football predictions? It is always a good idea to know what to think about before making football predictions. Are you looking for sports betting ideas that will help you win today? Find the best free sports betting predictions and recommendations for today. Check out the most accurate free football predictions for today games. Our football picks are created by industry specialists and provide you with information on all of the major events.</string>

    <string name="tip1">This tip may appear to be a minor point at the start of the list. Choosing the top tipster sites, on the other hand, will have a huge impact on your results. Many bettors follow bogus betting gurus and tipsters on social media. I was astonished to discover how simple it is to modify a bookmakers betting history or to photoshop a bet slip. Even yet, these basic tricks can defraud a lot of newcomers.</string>
    <string name="tip2">The bookmakers have their own football statistics databases, which they use to calculate and generate football odds. Why would you pass up the chance to incorporate similar databases in your strategy? Making money by betting on football is not an easy endeavor, and it is nearly impossible without the proper tools.</string>
    <string name="tip3">The best football betting tip I can recommend is to take advantage of free bets and even bitcoin betting bonus offers. I am shocked that so few bettors take advantage of this free money. Every bonus that you do not withdraw is free money that you have left on the table. The bookmakers are presenting these with evil intents, and they are not giving you presents when they give them, but rather keeping you engaged in losing money.</string>
    <string name="tip4">Arbitrage betting is the second approach for winning all of your football bets. It is a lot like matched betting. This football betting approach has been successful since there were multiple bookmakers. It is nearly hard for them to provide the same accurate odds as all of their competitors. To operate properly, successful football betting should be based on quantitative betting tactics or several years of knowledge.</string>
<string name="tip5">I have used several football betting strategies, but value betting is by far the most rewarding. Winning on football is difficult if you do not cover every outcome of your bets. I don\'t want to make this topic too long because I have already written a lot about it. Finding value in football betting manually necessitates the use of an expert bettor. Fortunately for us, there is a plethora of value betting software on the market. They scan the main bookmakers lines and compare them to sharp bookmakers lines (like Pinnacle).</string>
    <string name="close_dialog">close dialog</string>

</resources>